src/objects/ISSP_Case_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>AP_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOT_FDS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NOT FDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true this field should only be available on case creation and not on case view.

If false the field can be shown on both case creation and case view.</description>
        <label>New Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile_Id_List__c</fullName>
        <label>Profile Id List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ISSP Case Fields</label>
</CustomObject>